# sui-mini-tools

./: .env  Cargo.toml  README.md  REMEAD.md  sui.drawio
src/: account.rs  config.rs  lib.rs  main.rs
tests/: send_transfer_test.rs
