[package]
name = "stable_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_types =  { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", package = "shared-crypto" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
tempfile =  {version ="3.10.1",features = ["nightly"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3.30"
bcs = "0.1.6"
fastcrypto = "0.1.8"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
